# rWasm

./: .gitignore  Cargo.toml  README.md
examples/: 0000-if.wasm  0000-if.wat  0001-loop.wasm  0001-loop.wat  0002-call_and_tables.wasm  0002-call_and_tables.wat  0003-locals_and_globals.wasm  0003-locals_and_globals.wat  basic.wat  fib.wasm  hello-wasi.wasm  hello-wasi.wat
src/: main.rs  parser.rs  printer.rs  wasm.rs
src/cheri/: cheri_printer.rs  expr.rs  function.rs  instr.rs  mod.rs  printer_state.rs  util.rs
templates-for-generation/: guest_mem_wrapper.rs  imports.rs  imports_no_alloc.rs  imports_no_std.rs  memory_accessors.rs  ms_wasm.rs  ms_wasm_baggy_bounds.rs  ms_wasm_wasi.rs  static_func_returns.rs  tagged_value_definitions.rs
templates-for-generation/cheri/: cheri_wasi.h  prologue.c  prologue.h  rlbox_support.h
tests/: test.rs
tests/fib/: Cargo.toml
tests/fib/src/: lib.rs
tests/generated-wrapper/: Cargo.toml
tests/generated-wrapper/src/: main.rs
tests/hello-wasi/: Cargo.toml
tests/hello-wasi/src/: lib.rs
tests/wasm/: fib.wat  hello_wasi.wasm  hello_wasi.wat
