[package]
name = "rwasm"
version = "1.0.0+mswasm"
authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.5.0"

# Speed up `backtrace` even on a debug build. Suggested by `color-eyre`.
[profile.dev.package.backtrace]
opt-level = 3
