[package]
name = "rwasm"
version = "1.0.1"
authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
color-eyre = "0.6.2"

# Speed up `backtrace` even on a debug build. Suggested by `color-eyre`.
[profile.dev.package.backtrace]
opt-level = 3
